# wait-notes

./: .gitattributes  .gitignore  package-lock.json  package.json
docs/: README.md  index.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.ts  style.css
docs/.vitepress/theme/components/: HomePage.vue
docs/notes/: index.md  voice_transcription.html  vscode配置.md  导航.md
docs/notes/Python/: 3.创建虚拟环境.md  uv.md  并发.md  并发编程.md
docs/notes/Python/虚拟环境/: conda.md
docs/notes/vibecoding/: claudecode.md
docs/notes/vscode配置/: 配置.md
docs/notes/临时/: cozedify.md  test.md
docs/notes/产品/VideoCatcher/: 视频下载.md
docs/notes/产品/nex_fusion/: 1  baksql.md  打包.md  文件流转.md  消息流转.md  语音识别.md  部署.md  降噪.md
docs/notes/产品/qiko+/: 1.插件广场.md  11.新建账号.md  12.智能体类型.md  15.智能体设置默认变量值.md  16.bamboo.md  17.token计算.md  18.常见问题.md  20.导出sql.md  6.JWT认证体系.md  7.migrations升级脚本.md  8.自定义命令.md
docs/notes/产品/qiko_iva/: 消息队列流程.md
docs/notes/产品/语音识别/: funasr.md
docs/notes/产品/语音识别/polyvoice/nvidia/cuda13/: Dockerfile  docker-compose-template.yaml  docker-compose.yaml  pyproject.toml
docs/notes/学习/docker/: docker.md
docs/notes/学习/git/: git.md
docs/notes/学习/linux/: ss.sql  基本命令.md
docs/notes/学习/redis/: redis.md
docs/notes/学习/大模型/: 部署.md
docs/notes/开发/: docker.md  ngrok.md
docs/notes/开发/Python/: 1.python和java对比.md  2.python学习.md  4.celery.md  torch.md
docs/notes/开发/bamboo/: bamboo部署.md
docs/notes/开发/linux/: ssh.md  (+1 more)
docs/notes/系统/: setup_docker.sh  ubuntu22.04LTS.md
docs/notes/语音识别/: 队列系统高可用.md
docs/notes/项目部署信息/: readme.md
docs/public/: search-index.json
(+47 files in other folders)
